# fastapi-app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  exmaple.env  pyproject.toml
app/: main.py
app/api/: routes.py  video_dubber_ai.py
app/core/: config.py
app/enum/: transcript.py
app/schemas/: video_dubber_ai.py
app/services/: azure_tts_service.py  google_gemini_ai_service.py  translate_service.py  video_dubber_ai_service.py
